--- a/fullstackwithflutter_ui/pubspec.yaml
+++ b/fullstackwithflutter_ui/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.3
   intl: ^0.20.2
   provider: ^6.1.2
+  fl_chart: ^0.66.2
 
 dev_dependencies:
   flutter_test:
